--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -16,6 +16,6 @@
     <p><a href="./index.html">Go back</a></p>
     <ul class="gallery"></ul>
 
-    <script type="module" src="./js/1-gallery.js" defer></script>
+    <script type="module" src="./js/1-gallery.js" type="module"></script>
   </body>
 </html>
